# qcryptool

./: CITATION.cff  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  test.yml
configurations/channels/: amplitude_damping_sweep.json  amplitude_phase_damping_sweep.json  channel_config_example.json  depolarizing_sweep.json  fiber_optic.json  generalized_decoherence.json  near_threshold.json  pauli_noise_mix.json  quantum_memory.json
configurations/experiments/b92/: b92_depolarizing_sweep.json  b92_eve_intercept_resend.json  b92_ideal.json  b92_realistic_channel.json
configurations/experiments/bb84/: bb84_depolarizing_sweep.json  bb84_eve_intercept_resend.json  bb84_ideal.json  bb84_realistic_channel.json
configurations/experiments/bbm92/: bbm92_asymmetric_channels.json  bbm92_depolarizing_sweep.json  bbm92_eve_intercept_resend.json  bbm92_ideal.json
configurations/experiments/e91/: e91_asymmetric_channels.json  e91_depolarizing_sweep.json  e91_eve_intercept_resend.json  e91_ideal.json
configurations/experiments/gc01/: gc01_asymmetric_verifiers.json  gc01_depolarizing_sweep.json  gc01_eve_intercept_resend.json  gc01_ideal.json
configurations/experiments/qia_qzkp/: qia_qzkp_depolarizing_sweep.json  qia_qzkp_ideal.json  qia_qzkp_realistic_channel.json  qia_qzkp_threshold_sensitivity.json
configurations/experiments/sarg04/: sarg04_depolarizing_sweep.json  sarg04_eve_intercept_resend.json  sarg04_ideal.json  sarg04_realistic_channel.json
src/: channel.rs  config.rs  main.rs  output.rs  run.rs  stats.rs
tests/: cli.rs
(+4 files in other folders)
